# kraken-taxes

./: .gitignore  README.md  pyproject.toml
config/: example.toml
docs/: tax-profiles.md
src/kraken_taxes/: cli.py  config.py  html_report.py  kraken.py  ledger.py  models.py  pricing.py  reporting.py  tax.py  timezones.py
tests/: test_html_report.py  test_ledger.py  test_pricing.py  test_reporting.py  test_tax.py
