[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-taxes"
version = "0.1.0"
description = "Estimate taxable values for Kraken ledger rewards using historical Kraken trades."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Daniel Häggström" }]
dependencies = ["tzdata>=2024.1"]

[project.scripts]
kraken-taxes = "kraken_taxes.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
